Adding .gitignore files

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"Name": "Lord Aizen", "Password": "Htwtsf", "Small Points": 5, "Intermediate Points": 10, "Big Points": 50, "isProtected": true}
+{"Name": "Lord Aizen", "Password": "Gfspfn", "Small Points": 5, "Intermediate Points": 10, "Big Points": 50, "isProtected": false}
